--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Line</string>
+    <string name="open">drawer_open</string>
+    <string name="close">drawer_close</string>
 </resources>
